Some portfolio styles cleanup.

--- a/dev/index.html
+++ b/dev/index.html
@@ -87,45 +87,47 @@
       <div class="medium-12 columns">
       <h2>Things I've Done</h2>
       <hr>
-      I'm currently working on building some great things at Dropbox in San Francisco.
-      In the past, I've worked at Razorfish, Northwestern University, and ZURB. You can find some of my work below or take a look at my <a href="https://www.dropbox.com/s/cozchuo7l1n5be4/ResumeJeanie.pdf" target="_blank">résumé</a>.
+      <p>
+        I'm currently working on building some great things at Dropbox in San Francisco.
+        In the past, I've worked at Razorfish, Northwestern University, and ZURB. You can find some of my work below or take a look at my <a href="https://www.dropbox.com/s/cozchuo7l1n5be4/ResumeJeanie.pdf" target="_blank">résumé</a>.
+      </p>
       </div>
 	  </div>
-    <div class="row portfolio">
+    <div class="row row--portfolio">
       <div class="medium-12 columns">
         <div class="medium-6 columns">
-            <figure class="effect-bubba">
-              <img src="./img/juggle-yeti.svg" />
-              <figcaption>
-                <h2>Foundation for Sites</h2>
-                <a target="_blank" href="https://github.com/zurb/foundation"></a>
+            <figure class="portfolio__item portfolio__item--hover">
+              <img class="portfolio__image" src="./img/juggle-yeti.svg" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Foundation for Sites</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation"></a>
               </figcaption>
             </figure>
         </div>
         <div class="medium-6 columns">
-            <figure class="effect-bubba">
-              <img src="./img/yeti-hero.svg" />
-              <figcaption>
-                <h2>Foundation for Apps</h2>
-                <a target="_blank" href="https://github.com/zurb/foundation-apps"></a>
+            <figure class="portfolio__item portfolio__item--hover">
+              <img class="portfolio__image" src="./img/yeti-hero.svg" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Foundation for Apps</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation-apps"></a>
               </figcaption>
             </figure>
         </div>
         <div class="medium-6 columns">
-            <figure class="effect-bubba">
-              <img src="./img/inky-point.svg" />
-              <figcaption>
-                <h2>Foundation for Emails</h2>
-                <a target="_blank" href="https://github.com/zurb/foundation-emails"></a>
+            <figure class="portfolio__item portfolio__item--hover">
+              <img class="portfolio__image" src="./img/inky-point.svg" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Foundation for Emails</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation-emails"></a>
               </figcaption>
             </figure>
         </div>
         <div class="medium-6 columns">
-            <figure class="effect-bubba">
-              <img src="./img/rainbow.png" />
-              <figcaption>
-                <h2>Rainbow Ipsum</h2>
-                <a target="_blank" href="http://rainbowipsum.com"></a>
+            <figure class="portfolio__item portfolio__item--hover">
+              <img class="portfolio__image" src="./img/rainbow.png" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Rainbow Ipsum</h2>
+                <a class="portfolio__anchor" target="_blank" href="http://rainbowipsum.com"></a>
               </figcaption>
             </figure>
         </div>
