--- a/dev/index.html
+++ b/dev/index.html
@@ -18,7 +18,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
   <script type="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
-  <!--<script src="js/foundation.min.js"></script>-->
   <script src="js/main.min.js"></script>
 </head>
 <body>
@@ -33,30 +32,29 @@
       </section>
     </nav>
 	  <section class="hero hero-video">
-<!-- 	    <video autoplay loop>
+	    <video loop muted>
 				<source src="./img/kuroshio.mp4" type="video/mp4">
-			</video>  -->
+			</video>
 		  <div class="row intro">
 		    <div class="small-centered medium-uncentered medium-6 large-7 columns">
-		      <h1>dive in.</h1>
-		      <p>The video in the background is taken by Jon Rawlinson and displays the Okinawa Churaumi Aquarium.</p>
+          <p>“if<br>
+            the ocean<br>
+            can calm itself,<br>
+            so can you.<br>
+            we<br>
+            are both<br>
+            salt water<br>
+            mixed with<br>
+            air.”<br>
+            -nayyirah waheed</p>
 		    </div>
 		  </div>
 		</section>
   </header>
   <section id="about" class="section__content">
-    <div class="row">
-	  	<div class="medium-12 columns">
-        <h2>This site</h2>
-        <hr>
-        <p>
-          On this site, you'll find a little bit about me and my work. Currently, I'm not looking for work, but always looking to make great connections in the Bay area.
-        </p>
-	  	</div>
-    </div>
     <div class="row row--team">
       <div class="medium-12 columns">
-        <h2>Meet the "J" Team</h2>
+        <h2>squad</h2>
         <hr>
       </div>
       <div class="medium-4 columns">
@@ -78,7 +76,7 @@
         <h2 class="row__name--center">Jelly</h2>
         <h3>// pain-in-the-butt
         <br>// husky mix</h3>
-        <p>Jelly doesn't do too much other than sit on laptops and lick your face. Nonetheless, a very important part of the team.</p>
+        <p>Jelly contributes by leaving noseprints on computer screens.</p>
       </div>
     </div>
   </section>
@@ -171,7 +169,7 @@
   <footer class="text-center">
     <div class="row">
       <div class="medium-8 columns footer-info">
-        <p>Jeanie Chung is a developer currently located in the Bay Area.</p>
+        <p>Jeanie Chung is a developer currently located in the Bay Area. <p>The video in the background is taken by Jon Rawlinson and displays the Okinawa Churaumi Aquarium.</p></p>
         <i class="fi-heart"></i> <a href="mailto:hey@jeaniechung.com">Send love!</a>
         <p id="copyright"></p>
       </div>
