bug fix to navigation dots.

--- a/dev/index.html
+++ b/dev/index.html
@@ -221,13 +221,13 @@
             </div>
         </div>
     </section>
-    <footer>
-        <div class="flex__column section__content">
+    <footer class="footer">
+        <div class="flex__column footer__content">
             <p>Jamie Chung is a developer currently located in the Bay Area.
             </p>
             <p>The video in the background is taken by Jon Rawlinson and displays the Okinawa Churaumi Aquarium.</p>
             <p id="copyright"></p>
-            <i class="flex__item scum fa fa-rebel"></i>
+            <i class="flex__item footer__scum fa fa-rebel"></i>
         </div>
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
