Minor layout changes.

--- a/dev/index.html
+++ b/dev/index.html
@@ -181,7 +181,7 @@
                 </ul>
             </div>
         </div>
-        <div class="flex__row section__row">
+        <div class="flex__column section__row">
             <h2>Inclusion</h2>
             <p>Outside of work, I'm involved with Girl Develop It: Oakland, Lesbians Who Tech, and Diversity Advocates. I love discussing the importance of diversity and inclusion in the tech industry and what that even looks like. If you'd like to chat about that, feel free to reach out.</p>
         </div>
@@ -221,8 +221,8 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="flex__column footer__content">
+    <footer class="footer flex__row">
+        <div class="footer__content">
             <p>Jamie Chung is a developer currently located in the Bay Area.
             </p>
             <p>The video in the background is taken by Jon Rawlinson and displays the Okinawa Churaumi Aquarium.</p>
