Minor changes to index content.

--- a/dev/index.html
+++ b/dev/index.html
@@ -65,8 +65,8 @@
                         // developer<br>
                         // shark afficionado
                     </h3>
-                    <p>I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>. I identify as genderqueer and use <strong>they/them</strong> pronouns.</p>
-                    <p>I was born in Seoul, raised in Chicago, schooled in St. Louis, and now reside in Oakland with my dog - Jelly.</p>
+                    <p>I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>. I also really love <a href="https://www.instagram.com/explore/tags/chefjamieshark/" target="_blank">making meals</a> for my friends and myself as a form of self-care. I identify as genderqueer and use <strong>they/them</strong> pronouns.</p>
+                    <p><em>Ex:</em> Jamie is great. They were born in Seoul, raised in Chicago, schooled in St. Louis, and now reside in Oakland with their dog - Jelly.</em></p>
                 </div>
             </div>
             <div class="flex__item flex--shrink about__asset">
