--- a/dev/index.html
+++ b/dev/index.html
@@ -192,7 +192,7 @@
         </div>
         <div class="flex__row flex--sb contact__content">
             <div class="flex__item flex__column flex--shrink contact__container">
-                <a target="_blank" href="mailto:jamie@attnjamie.com">
+                <a target="_blank" href="mailto:hey@jamiechu.ng">
                     <div class="flex__item contact__icon">
                         <i class="fa fa-send fa-2x"></i>
                     </div>
